2007-11-17  Vlad Seryakov  <seryakov@users.sf.net>

	* configure.in: Fixed absence of semicolon between paths for 
	linker in -rpath

	* include/Makefile.win32:
	Make sure src incude goes first	

	* nsd/tclmisc.c:
	* nsd/rollfile.c:
	* nsd/fastpath.c: Use Tcl_allocStatBuf for Tcl_FSStat to be
	portable. On Windows using static struct corrupts stack.

        Windows port looks stable now

2007-11-13  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/urlspace.c: Make Ns_UrlSpecificWalk public function because it
	is used in many places already and thus shoul dbe public

	* include/nsthread.h:
	* nsd/nsd.h: check HAVE_CONFIG_H before including config.h

	* Makefile.win32: Updated build process, put help instructions, removed
	automatic config/makefile generations

2007-11-13  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile.win32
	* include/nsthread.h:
	* include/Makefile.module
	* include/Makefile.win32
	* nsthread/winthread.c:
	* nsthread/Makefile:
	* nsd/Makefile:
	* nscp/Makefile:
	* nssock/Makefile:
	* nsdb/Makefile:
	* nscgi/Makefile:
	* nslog/Makefile:
	* nsd/nsmain.c:
	* nsd/tcltime.c:
	* nsd/tclmisc.c: Initial Windows port, still work in progress. 
        New makefile added to perform compiling fromcommand line using the same top
	level makefile. To compile for windows, edit include/Makefile.build and
	replace include/Makefile.module with include/Makefile.win32. 

	Windows port does not use config.h, all platform specific defines are in nsthread.h
	for now. Once build is polished it can be moved to more appropriate place.

	Current Win32 build process is:
	edit top Makefile.win32 for paths to Tcl and Visual C++
	nmake -f Makefile.win32
	nmake -f Makefile.win32 install
	
2007-10-23  Vlad Seryakov  <seryakov@users.sf.net>

    	* nsd/driver.c:
    	* nsd/progress.c:
    	* nsd/nsd.h: Added support for uploads larger than 2GB, length fields are
    	Tcl_WideInt now, printf output modifiers updated

    	* nsd/driver.c:
    	* nsd/nsd.h: