@@ -1,5 +1,9 @@
 2007-11-17  Vlad Seryakov  <seryakov@users.sf.net>
 
+	* nsd/nsd.h:
+	* nsd/fastpath.c: Added private function NsFastAllocStatBuf
+	to follow Tcl VFS API
+
 	* configure.in: Fixed absence of semicolon between paths for 
 	linker in -rpath
 
